Closed
Bug 708782
Opened 9 years ago
Closed 9 years ago
IonMonkey: Assertion failure: no payload..., ion/x86/CodeGenerator-x86.cpp:137
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: dvander)
References
Details
Attachments
(1 file)
1.85 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
jit-test/tests/debug/onEnterFrame-01.js asserts on x86 with --ion-eager. Reduced testcase without callgname: var type; function test() { type = undefined; } test();
![]() |
Assignee | |
Comment 1•9 years ago
|
||
Reporter | ||
Updated•9 years ago
|
Attachment #583991 -
Flags: review?(jdemooij) → review+
![]() |
Assignee | |
Comment 2•9 years ago
|
||
http://hg.mozilla.org/projects/ionmonkey/rev/b235c328a6d9
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•