Fix assert when storing undefined to a slot (bug 708782, r=jandem).