js/src/ion/x86/CodeGenerator-x86.cpp
@@ -269,7 +269,7 @@ CodeGeneratorX86::visitStoreSlotT(LStoreSlotT *store)
 
     // Store the type tag if needed.
     if (valueType != store->mir()->slotType())
-        masm.storeTypeTag(ImmTag(MIRTypeToTag(valueType)), Operand(base, offset));
+        masm.storeTypeTag(ImmType(ValueTypeFromMIRType(valueType)), Operand(base, offset));
 
     // Store the payload.
     if (value->isConstant())
